chore: Clean up build artifacts and add .gitignore
- Added comprehensive .gitignore to exclude:
  - Scala/SBT build artifacts (target/, project/target/)
  - IDE configurations (.idea/, .vscode/, .bsp/)
  - Backup files (*_bkp, *.bak, *_initial, etc.)
  - Python artifacts (__pycache__, *.pyc)
  - Logs and temporary files
- Untracked unrelated build artifacts that were previously committed (target/ files)
- Ensured clean repository state